--- a/ramdisk/init.capri_ss_s2vep.rc
+++ b/ramdisk/init.capri_ss_s2vep.rc
@@ -44,12 +44,12 @@ on init
     symlink /storage/emulated/legacy /storage/sdcard0
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
     mkdir   /mnt/media_rw/sdcard1 0700 media_rw media_rw
-    mkdir   /mnt/media_rw/usbdisk 0700 media_rw media_rw
+    mkdir   /mnt/media_rw/usbdisk0 0700 media_rw media_rw
     mkdir   /storage/sdcard1 0700 root root
-    symlink /storage/sdcard1 /external_sd
-    symlink /storage/sdcard1 /mnt/external_sd
-    symlink /storage/usbdisk0 /usbdisk
-    symlink /storage/usbdisk0 /mnt/usbdisk
+    symlink /storage/sdcard1 /extSdCard
+    symlink /storage/sdcard1 /mnt/extSdCard
+    symlink /storage/usbdisk0 /usbdisk0
+    symlink /storage/usbdisk0 /mnt/usbdisk0
 
     mkdir /preload 0771 system system 
 
